# tuurna

./: .gitignore  Dockerfile  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: webpage.yml
doc/: _config.yml  _toc.yml  glossary.md  start.md
doc/_static/: custom.css
doc/characters/: advancement.md  effects.md  intro.md
doc/gameplay/: rolls.md  tension.md  time.md
doc/intro/: how-to-play.md  legal.md
doc/skills/: core.md  intro.md  list.md  mundane.md
src/tuurna/: __init__.py
src/tuurna/skills/: __init__.py  _core.py
